Header categories text align fix

--- a/sass/parts/_header.sass
+++ b/sass/parts/_header.sass
@@ -240,9 +240,10 @@
 					margin: 0 8px 
 					.category-name 
 						font-family: Montserrat 
-						font-size: 16px 
+						font-size: 14px 
 						font-weight: 600 
 						color: #000
+						text-align: center
 					.category-image
 						text-align: center
 						height: 60px
